discussion/kv_engine/172957/172957_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP Richard: Monotonic label policycy - kv_engine

Change-Id: Id6bd769d91f56d0e596baec931e1b97da61ba3b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-03-29 11:53:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-29 12:00:30.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16231/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:47:7: error: no matching constructor for initialization of "Monotonic<int64_t>" (aka "Monotonic<long>") [clang-diagnostic-error]
      maxVisibleSeqno(maxVisibleSeqno, MaxVisibleSeqnoLabeler({vb.getId()})),
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/monotonic.h:97:14: note: candidate constructor not viable: allows at most single argument "val", but 2 arguments were provided
    explicit Monotonic(const T val = std::numeric_limits<T>::min()) : val(val) {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/monotonic.h:100:5: note: candidate constructor not viable: requires single argument "other", but 2 arguments were provided
    Monotonic(const Monotonic& other)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:945:52: error: template argument for template template parameter must be a class template or type alias template [clang-diagnostic-error]
    Monotonic<int64_t, DefaultOrderReversedPolicy, LastBySeqnoLabeler>
                                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16231/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:47:7:
error: no matching constructor for initialization of "Monotonic<int64_t>" (aka "Monotonic<long>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16231/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44736/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\checkpoint_manager.h(945): error C3200: "CheckpointManager::LastBySeqnoLabeler": invalid template argument for template parameter "Invariant", expected a class template ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44736/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37639/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.h:945:52:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17083/ : FAILURE

Compile error at [2022-03-29T11:56:21.820Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:52:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17083/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5948/ : FAILURE

Compile error at [2022-03-29T11:58:56.148Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:70:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5948/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5888/ : FAILURE

Compile error at [2022-03-29T11:57:19.650Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:52:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5888/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18329/ : FAILURE

Compile error at [2022-03-29T11:58:02.116Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:70:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18329/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18003/ : FAILURE

Compile error at [2022-03-29T11:58:25.200Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:70:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18003/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19035/ : FAILURE

Compile error at [2022-03-29T11:58:21.443Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:52:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19035/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26413/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15161/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-29 12:25:19.000000000
Message: 
Set Work In Progress
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-29 12:38:31.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44741/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\checkpoint_manager.h(945): error C3200: "CheckpointManager::LastBySeqnoLabeler": invalid template argument for template parameter "Invariant", expected a class template ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44741/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19040/ : FAILURE

Compile error at [2022-03-29T12:34:00.973Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:52:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19040/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18008/ : FAILURE

Compile error at [2022-03-29T12:33:21.564Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:70:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18008/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5953/ : FAILURE

Compile error at [2022-03-29T12:38:08.037Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:70:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5953/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26418/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5893/ : FAILURE

Compile error at [2022-03-29T12:31:50.948Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:52:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5893/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18334/ : FAILURE

Compile error at [2022-03-29T12:32:12.273Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:70:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18334/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17088/ : FAILURE

Compile error at [2022-03-29T12:27:04.887Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:945:52:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17088/ )'
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-04-20 08:32:28.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
